<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.typingspeed</groupId>
    <artifactId>typing-speed-test</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>Typing Speed Test</name>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kotlin.version>1.9.23</kotlin.version>
        <javafx.version>21.0.2</javafx.version>
        <jpackage.appVersion>0.1.0</jpackage.appVersion>
        <jpackage.icon>${project.basedir}/src/main/resources/images/TypeFast.ico</jpackage.icon>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
            <version>${kotlin.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>process-test-sources</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>17</jvmTarget>
                    <languageVersion>1.9</languageVersion>
                    <sourceDirs>
                        <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
                    </sourceDirs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.version}</version>
                <configuration>
                    <mainClass>com.typingspeed.ui.TypingTutorAppKt</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>installer</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>3.6.1</version>
                        <executions>
                            <execution>
                                <id>copy-runtime-dependencies</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <includeScope>runtime</includeScope>
                                    <outputDirectory>${project.build.directory}/jpackage/lib</outputDirectory>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-application-jar</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>copy</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>${project.groupId}</groupId>
                                            <artifactId>${project.artifactId}</artifactId>
                                            <version>${project.version}</version>
                                            <type>jar</type>
                                            <outputDirectory>${project.build.directory}/jpackage</outputDirectory>
                                            <destFileName>${project.build.finalName}.jar</destFileName>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>1.7.0</version>
                        <executions>
                            <execution>
                                <id>create-windows-installer</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>jpackage</goal>
                                </goals>
                                <configuration>
                                    <type>EXE</type>
                                    <name>Typing Speed Test</name>
                                    <vendor>Lintshiwe</vendor>
                                    <destination>${project.build.directory}/installer</destination>
                                    <input>${project.build.directory}/jpackage</input>
                                    <appVersion>${jpackage.appVersion}</appVersion>
                                    <icon>${jpackage.icon}</icon>
                                    <mainJar>${project.build.finalName}.jar</mainJar>
                                    <mainClass>com.typingspeed.ui.TypingTutorAppKt</mainClass>
                                    <modulePaths>
                                        <modulePath>${project.build.directory}/jpackage/lib</modulePath>
                                    </modulePaths>
                                    <addModules>javafx.controls,javafx.fxml,javafx.graphics</addModules>
                                    <winShortcut>true</winShortcut>
                                    <winMenu>true</winMenu>
                                    <winDirChooser>true</winDirChooser>
                                    <arguments>
                                        <argument>--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</argument>
                                    </arguments>
                                    <javaOptions>
                                        <javaOption>-Dprism.order=sw</javaOption>
                                    </javaOptions>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>installer-msi</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>3.6.1</version>
                        <executions>
                            <execution>
                                <id>copy-runtime-dependencies</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <includeScope>runtime</includeScope>
                                    <outputDirectory>${project.build.directory}/jpackage/lib</outputDirectory>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-application-jar</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>copy</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>${project.groupId}</groupId>
                                            <artifactId>${project.artifactId}</artifactId>
                                            <version>${project.version}</version>
                                            <type>jar</type>
                                            <outputDirectory>${project.build.directory}/jpackage</outputDirectory>
                                            <destFileName>${project.build.finalName}.jar</destFileName>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>1.7.0</version>
                        <executions>
                            <execution>
                                <id>create-windows-msi-installer</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>jpackage</goal>
                                </goals>
                                <configuration>
                                    <type>MSI</type>
                                    <name>Typing Speed Test</name>
                                    <vendor>Lintshiwe</vendor>
                                    <destination>${project.build.directory}/installer-msi</destination>
                                    <input>${project.build.directory}/jpackage</input>
                                    <appVersion>${jpackage.appVersion}</appVersion>
                                    <mainJar>${project.build.finalName}.jar</mainJar>
                                    <mainClass>com.typingspeed.ui.TypingTutorAppKt</mainClass>
                                    <modulePaths>
                                        <modulePath>${project.build.directory}/jpackage/lib</modulePath>
                                    </modulePaths>
                                    <addModules>javafx.controls,javafx.fxml,javafx.graphics</addModules>
                                    <winShortcut>true</winShortcut>
                                    <winMenu>true</winMenu>
                                    <winDirChooser>true</winDirChooser>
                                    <arguments>
                                        <argument>--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</argument>
                                    </arguments>
                                    <javaOptions>
                                        <javaOption>-Dprism.order=sw</javaOption>
                                    </javaOptions>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
